src2/objects/NES_CustomLog__c.object
<CustomObject>
    <description>Used for logging exceptions and other situations from async processes.</description>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <description>Name of the class where the log was generated</description>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>When the log is generated due to an exception in the code, the line number from where the exception was thrown</description>
        <label>Line Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <description>Method of a Class where the log was generated</description>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NES_Object__c</fullName>
        <label>Object</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NES_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
                <value>
                    <fullName>Needs Attention</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Custom Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>NES_Object__c</columns>
        <columns>Apex_Class__c</columns>
        <columns>Method__c</columns>
        <columns>NES_State__c</columns>
        <columns>NES_Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000}</displayFormat>
        <label>Custom Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>